feat(gestao-contratos): implementa tasks 1.0-14.0 — base de governanca, Kanban, notificacoes, auditoria, integracoes Google e frontend LevelUp/JS
Este commit consolida todo o desenvolvimento do modulo Gestao de Contratos (fim a fim)
as tasks 1.0 ate 14.0, incluindo backend Spring Boot 4.0.3 + frontend React/Vite.

**Backend — Fundacao e Governanca (Tasks 1.0-2.0):**
- Flyway baseline com migrations versionadas (V202604172009 a V202604211000)
- Autorizacao manual com catalogo de 32 permissoes (CodigoPermissao), grupos de perfis
  e atribuicao por usuario (sem vinculo automatico por cargo)
- JWT stateless com authorities extraidas de permissoes diretas + grupos
- UsuarioLogadoService para identidade contextual e checks reutilizaveis
- GlobalExceptionHandler com ProblemDetail (RFC 7807)

**Backend — Nucleo Operacional (Tasks 3.0, 10.0, 12.0-13.0):**
- Kanban por contrato: ColunaKanban, TarefaContrato, MembroTime com DnD support
- Dependencias entre tarefas (finish-to-start), colunas configuraveis (INICIAL/INTERMEDIARIA/FINAL)
- Servico N:1 vinculado a Proposta e Contrato (migration servico_not_null)
- Upload de proposta comercial com arquivo binario (PDF ate 10MB, tabela proposta_arquivo)
- PropostaService com criarPropostaComArquivo, substituirArquivo, obterDocumento

**Backend — Notificacoes Confiaveis (Task 4.0):**
- Outbox pattern com retry exponencial ate 24h e fechamento em ERRO_PERMANENTE
- SSE em tempo real (SseService) + notificacoes in-app com status de leitura
- Preferencias de notificacao por usuario/tipo/canal
- Endpoints: GET /api/notificacoes, /stream, /ler, /ler-todas, /preferencias

**Backend — Auditoria Exportavel (Task 5.0):**
- Tabela auditoria_eventos com tipo_evento, entidade, ator, correlation_id, payload_json
- Exportacao CSV e PDF com filtros (FiltroAuditoria)
- Eventos integrados em ContratoService, TarefaContratoService, AutenticacaoService

**Backend — Integracoes Google (Task 6.0):**
- PropriedadesGoogle consolidado com OAuth2, timeout e re